--- a/mandelbrot/Cargo.toml
+++ b/mandelbrot/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mandelbrot"
 version = "0.1.0"
-authors = ["Your Name <you@example.com>"]
+authors = ["PACKAGE AUTHOR <package_author@example.com>"]
 edition = "2018"
 
 [lib]
@@ -11,8 +11,8 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+js-sys = "0.3.40"
 wasm-bindgen = "0.2.63"
-
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
@@ -26,9 +26,24 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
 
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'CanvasRenderingContext2d',
+  'Document',
+  'Element',
+  'HtmlCanvasElement',
+  'ImageData',
+  'Performance',
+  'Window',
+]
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
 [profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+lto = true
+opt-level = 3
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
